@@ -1,5 +1,12 @@
 package ar.com.fdvs.dj.util;
 
+import java.lang.reflect.Constructor;
+import java.util.Map;
+
+import org.apache.commons.beanutils.BeanUtils;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+
 import ar.com.fdvs.dj.core.DJException;
 import ar.com.fdvs.dj.core.layout.LayoutManager;
 import ar.com.fdvs.dj.core.registration.EntitiesRegistrationException;
@@ -13,15 +20,14 @@ import net.sf.jasperreports.engine.JRChild;
 import net.sf.jasperreports.engine.JRDefaultStyleProvider;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRPen;
-import net.sf.jasperreports.engine.design.*;
-import net.sf.jasperreports.engine.type.LineStyleEnum;
+import net.sf.jasperreports.engine.design.JRDesignBand;
+import net.sf.jasperreports.engine.design.JRDesignElement;
+import net.sf.jasperreports.engine.design.JRDesignGraphicElement;
+import net.sf.jasperreports.engine.design.JRDesignGroup;
+import net.sf.jasperreports.engine.design.JRDesignParameter;
+import net.sf.jasperreports.engine.design.JRDesignSection;
+import net.sf.jasperreports.engine.design.JRDesignStyle;
 import net.sf.jasperreports.engine.type.SplitTypeEnum;
-import org.apache.commons.beanutils.BeanUtils;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
-import java.lang.reflect.Constructor;
-import java.util.Map;
 
 public class LayoutUtils {
 	
@@ -69,7 +75,7 @@ public class LayoutUtils {
 					JRDesignStyle style = new JRDesignStyle();
 					dest = constructor.newInstance(style.getDefaultStyleProvider());
 				} else {
-					dest = element.getClass().newInstance();
+					dest = element.getClass().getConstructor().newInstance();
 				}
 
 				BeanUtils.copyProperties(dest, element);
